metadata-sfdx/force-app/main/default/objects/LiveText__Current_Optin_Status__c/LiveText__Current_Optin_Status__c.object-meta.xml
<CustomObject>
    <description>Represents the current opt-in status for a given combination of channel, LiveMessage channel ID, and subscriber channel ID.</description>
    <label>Current Optin Status</label>
    <nameField>
        <label>Current Optin Status Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Current Optin Statuses</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>