metadata-sfdx/force-app/main/default/objects/LiveText__Current_Optin_Status__c/fields/LiveText__LiveMessage_Channel__c.field-meta.xml
<CustomField>
    <fullName>LiveText__LiveMessage_Channel__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The LiveMessage channel item related to this opt-in status</description>
    <label>LiveMessage Channel</label>
    <referenceTo>LiveText__LiveText_Number__c</referenceTo>
    <relationshipLabel>Current Optin Statuses</relationshipLabel>
    <relationshipName>Current_Optin_Statuses</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>