metadata-sfdx/force-app/main/default/objects/LiveText__Current_Optin_Status__c/fields/LiveText__Subscriber_Channel_ID__c.field-meta.xml
<CustomField>
    <fullName>LiveText__Subscriber_Channel_ID__c</fullName>
    <description>The channel ID of the subscriber opting in or out of communication with the relevant LiveMessage channel item.</description>
    <label>Subscriber Channel ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>