metadata-sfdx/force-app/main/default/objects/LiveText__Current_Optin_Status__c/fields/LiveText__UID__c.field-meta.xml
<CustomField>
    <fullName>LiveText__UID__c</fullName>
    <description>Unique identifier for this combination of LiveMessage channel and subscriber channel identifiers</description>
    <label>UID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>